@@ -4,6 +4,7 @@ import com.happyfeet.model.entities.Cita;
 import com.happyfeet.model.entities.enums.CitaEstado;
 import com.happyfeet.repository.CitaRepository;
 import com.happyfeet.service.CitaService;
+import com.happyfeet.util.FileLogger;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -11,99 +12,194 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 
+/**
+ * Implementación del servicio de gestión de citas médicas.
+ * Maneja todas las operaciones CRUD y reglas de negocio para citas.
+ */
 public class CitaServiceImpl implements CitaService {
+
+    private static final FileLogger LOG = FileLogger.getInstance();
 
     private final CitaRepository citaRepository;
 
     public CitaServiceImpl(CitaRepository citaRepository) {
-        this.citaRepository = Objects.requireNonNull(citaRepository, "citaRepository no puede ser null");
+        this.citaRepository = Objects.requireNonNull(citaRepository, "CitaRepository no puede ser null");
+        LOG.info("CitaServiceImpl inicializado");
     }
 
     @Override
     public Cita crear(Cita cita) {
         validarNoNull(cita, "cita");
-        validarNuevaCita(cita);
-        LocalDateTime inicio = cita.getInicio();
-        LocalDateTime fin = cita.getFin() != null ? cita.getFin() : inicio.plusMinutes(30);
-        if (citaRepository.existsOverlap(cita.getIdVeterinario(), inicio, fin)) {
-            throw new ConflictoDeDatosException("El veterinario ya tiene una cita en ese horario");
+        validarCitaParaCreacion(cita);
+
+        // Asignar estado inicial si no tiene
+        if (cita.getEstado() == null) {
+            cita.setEstado(CitaEstado.PROGRAMADA);
         }
-        if (cita.getEstado() == null) cita.setEstado(CitaEstado.getEstadoInicial());
-        return citaRepository.save(cita);
+
+        // Validar que no haya solape de horarios
+        if (haySolape(cita.getIdVeterinario(), cita.getInicio(), cita.getFin())) {
+            throw new ConflictoHorarioException("El veterinario ya tiene una cita en ese horario");
+        }
+
+        try {
+            Cita citaCreada = citaRepository.save(cita);
+            LOG.info("Cita creada: ID " + citaCreada.getId() + " para veterinario " + cita.getIdVeterinario());
+            return citaCreada;
+        } catch (Exception e) {
+            LOG.error("Error creando cita", e);
+            throw new ServiceException("Error al crear la cita: " + e.getMessage(), e);
+        }
     }
 
     @Override
     public Cita actualizar(Long id, Cita cambios) {
         validarNoNull(id, "id");
         validarNoNull(cambios, "cambios");
-        Cita existente = citaRepository.findById(id)
-                .orElseThrow(() -> new RecursoNoEncontradoException("Cita con id " + id + " no existe"));
-        if (!existente.getEstado().esModificable()) {
-            throw new ValidacionException("La cita en estado " + existente.getEstado().getNombre() + " no es modificable");
+
+        Optional<Cita> citaExistente = citaRepository.findById(id);
+        if (citaExistente.isEmpty()) {
+            throw new RecursoNoEncontradoException("No se encontró cita con ID: " + id);
         }
-        Cita merged = mergeCita(existente, cambios);
-        validarCitaGenerica(merged);
-        LocalDateTime inicio = merged.getInicio();
-        LocalDateTime fin = merged.getFin() != null ? merged.getFin() : inicio.plusMinutes(30);
-        if (citaRepository.existsOverlap(merged.getIdVeterinario(), inicio, fin)) {
-            // Permitir si es la misma cita en el mismo horario (no detectamos por id en query básica)
-            // Para simplificar, asumimos que existe solape con otra distinta
-            throw new ConflictoDeDatosException("Solape de horarios con otra cita del veterinario");
+
+        Cita cita = citaExistente.get();
+
+        // Validar que se pueda modificar
+        if (!cita.getEstado().esModificable()) {
+            throw new EstadoInvalidoException("No se puede modificar una cita en estado: " + cita.getEstado().getNombre());
         }
-        return citaRepository.update(merged);
+
+        // Aplicar cambios
+        if (cambios.getInicio() != null) {
+            // Validar solape si se cambia la hora
+            if (!cambios.getInicio().equals(cita.getInicio())) {
+                LocalDateTime nuevoFin = cambios.getFin() != null ? cambios.getFin() : cambios.getInicio().plusHours(1);
+                if (haySolape(cita.getIdVeterinario(), cambios.getInicio(), nuevoFin)) {
+                    throw new ConflictoHorarioException("El veterinario ya tiene una cita en el nuevo horario");
+                }
+            }
+            cita.setInicio(cambios.getInicio());
+        }
+
+        if (cambios.getFin() != null) {
+            cita.setFin(cambios.getFin());
+        }
+
+        if (cambios.getMotivo() != null && !cambios.getMotivo().trim().isEmpty()) {
+            cita.setMotivo(cambios.getMotivo());
+        }
+
+        try {
+            Cita actualizada = citaRepository.update(cita);
+            LOG.info("Cita actualizada: ID " + id);
+            return actualizada;
+        } catch (Exception e) {
+            LOG.error("Error actualizando cita ID " + id, e);
+            throw new ServiceException("Error al actualizar la cita: " + e.getMessage(), e);
+        }
     }
 
     @Override
-    public void confirmar(Long id) { cambiarEstado(id, CitaEstado.CONFIRMADA); }
+    public void confirmar(Long id) {
+        cambiarEstado(id, CitaEstado.CONFIRMADA);
+    }
 
     @Override
-    public void iniciar(Long id) { cambiarEstado(id, CitaEstado.EN_CURSO); }
+    public void iniciar(Long id) {
+        cambiarEstado(id, CitaEstado.EN_CURSO);
+    }
 
     @Override
-    public void finalizar(Long id) { cambiarEstado(id, CitaEstado.FINALIZADA); }
+    public void finalizar(Long id) {
+        cambiarEstado(id, CitaEstado.FINALIZADA);
+    }
 
     @Override
-    public void cancelar(Long id) { cambiarEstado(id, CitaEstado.CANCELADA); }
+    public void cancelar(Long id) {
+        cambiarEstado(id, CitaEstado.CANCELADA);
+    }
 
     @Override
     public Cita reprogramar(Long id, LocalDateTime nuevoInicio, LocalDateTime nuevoFin, String nuevoMotivo) {
         validarNoNull(id, "id");
         validarNoNull(nuevoInicio, "nuevoInicio");
-        if (nuevoFin != null && nuevoFin.isBefore(nuevoInicio)) {
-            throw new ValidacionException("La hora de fin no puede ser anterior al inicio");
+
+        Optional<Cita> citaOpt = citaRepository.findById(id);
+        if (citaOpt.isEmpty()) {
+            throw new RecursoNoEncontradoException("No se encontró cita con ID: " + id);
         }
-        Cita existente = citaRepository.findById(id)
-                .orElseThrow(() -> new RecursoNoEncontradoException("Cita con id " + id + " no existe"));
-        if (!existente.getEstado().esModificable()) {
-            throw new ValidacionException("La cita en estado " + existente.getEstado().getNombre() + " no es reprogramable");
+
+        Cita cita = citaOpt.get();
+
+        // Validar que se pueda reprogramar
+        if (!cita.getEstado().puedeTransicionarA(CitaEstado.REPROGRAMADA)) {
+            throw new EstadoInvalidoException("No se puede reprogramar una cita en estado: " + cita.getEstado().getNombre());
         }
-        LocalDateTime fin = nuevoFin != null ? nuevoFin : nuevoInicio.plusMinutes(30);
-        if (citaRepository.existsOverlap(existente.getIdVeterinario(), nuevoInicio, fin)) {
-            throw new ConflictoDeDatosException("Ya existe una cita en el horario solicitado");
+
+        // Validar nuevo horario
+        if (nuevoInicio.isBefore(LocalDateTime.now())) {
+            throw new ValidationException("No se puede reprogramar para una fecha pasada");
         }
-        existente.setInicio(nuevoInicio);
-        existente.setFin(nuevoFin);
-        if (nuevoMotivo != null && !nuevoMotivo.isBlank()) existente.setMotivo(nuevoMotivo.trim());
-        // Mantenemos el estado (PROGRAMADA/CONFIRMADA), no forzamos REPROGRAMADA para no violar transiciones
-        return citaRepository.update(existente);
+
+        LocalDateTime finCalculado = nuevoFin != null ? nuevoFin : nuevoInicio.plusHours(1);
+        if (haySolape(cita.getIdVeterinario(), nuevoInicio, finCalculado)) {
+            throw new ConflictoHorarioException("El veterinario ya tiene una cita en el nuevo horario");
+        }
+
+        // Actualizar datos
+        cita.setInicio(nuevoInicio);
+        cita.setFin(finCalculado);
+        if (nuevoMotivo != null && !nuevoMotivo.trim().isEmpty()) {
+            cita.setMotivo(nuevoMotivo);
+        }
+
+        // Cambiar estado
+        cita.setEstado(CitaEstado.REPROGRAMADA);
+
+        try {
+            Cita reprogramada = citaRepository.update(cita);
+            LOG.info("Cita reprogramada: ID " + id + " para " + nuevoInicio);
+            return reprogramada;
+        } catch (Exception e) {
+            LOG.error("Error reprogramando cita ID " + id, e);
+            throw new ServiceException("Error al reprogramar la cita: " + e.getMessage(), e);
+        }
     }
 
     @Override
     public Optional<Cita> buscarPorId(Long id) {
         validarNoNull(id, "id");
-        return citaRepository.findById(id);
+
+        try {
+            return citaRepository.findById(id);
+        } catch (Exception e) {
+            LOG.error("Error buscando cita por ID " + id, e);
+            throw new ServiceException("Error al buscar la cita: " + e.getMessage(), e);
+        }
     }
 
     @Override
     public List<Cita> listarPorFecha(LocalDate fecha) {
         validarNoNull(fecha, "fecha");
-        return citaRepository.findByDate(fecha);
+
+        try {
+            return citaRepository.findByDate(fecha);
+        } catch (Exception e) {
+            LOG.error("Error listando citas por fecha " + fecha, e);
+            throw new ServiceException("Error al listar citas por fecha: " + e.getMessage(), e);
+        }
     }
 
     @Override
     public List<Cita> listarPorEstado(CitaEstado estado) {
         validarNoNull(estado, "estado");
-        return citaRepository.findByEstado(estado);
+
+        try {
+            return citaRepository.findByEstado(estado);
+        } catch (Exception e) {
+            LOG.error("Error listando citas por estado " + estado, e);
+            throw new ServiceException("Error al listar citas por estado: " + e.getMessage(), e);
+        }
     }
 
     @Override
@@ -111,65 +207,165 @@ public class CitaServiceImpl implements CitaService {
         validarNoNull(idVet, "idVet");
         validarNoNull(desde, "desde");
         validarNoNull(hasta, "hasta");
-        if (hasta.isBefore(desde)) throw new ValidacionException("Rango de fechas inválido");
-        return citaRepository.findByVeterinarioAndRange(idVet, desde, hasta);
+
+        if (hasta.isBefore(desde)) {
+            throw new ValidationException("La fecha 'hasta' no puede ser anterior a 'desde'");
+        }
+
+        try {
+            return citaRepository.findByVeterinarioAndRange(idVet, desde, hasta);
+        } catch (Exception e) {
+            LOG.error("Error listando citas por veterinario y rango", e);
+            throw new ServiceException("Error al listar citas por veterinario: " + e.getMessage(), e);
+        }
     }
 
     @Override
     public boolean haySolape(Long idVet, LocalDateTime inicio, LocalDateTime fin) {
         validarNoNull(idVet, "idVet");
         validarNoNull(inicio, "inicio");
-        if (fin == null) fin = inicio.plusMinutes(30);
-        if (fin.isBefore(inicio)) throw new ValidacionException("fin antes de inicio");
-        return citaRepository.existsOverlap(idVet, inicio, fin);
-    }
 
-    // ----------------- Helpers -----------------
-    private void cambiarEstado(Long id, CitaEstado nuevo) {
-        validarNoNull(id, "id");
-        Cita c = citaRepository.findById(id)
-                .orElseThrow(() -> new RecursoNoEncontradoException("Cita con id " + id + " no existe"));
-        var error = c.getEstado().validarTransicion(nuevo);
-        if (error.isPresent()) throw new ValidacionException(error.get());
-        c.setEstado(nuevo);
-        citaRepository.update(c);
-    }
+        if (fin == null) {
+            fin = inicio.plusHours(1); // Duración por defecto
+        }
 
-    private static void validarNuevaCita(Cita c) {
-        validarCitaGenerica(c);
-        if (c.getEstado() != null && c.getEstado() != CitaEstado.PROGRAMADA) {
-            throw new ValidacionException("Una nueva cita debe iniciar en estado PROGRAMADA");
+        if (fin.isBefore(inicio) || fin.equals(inicio)) {
+            throw new ValidationException("La hora de fin debe ser posterior a la de inicio");
+        }
+
+        try {
+            return citaRepository.existsOverlap(idVet, inicio, fin);
+        } catch (Exception e) {
+            LOG.error("Error verificando solape de citas", e);
+            throw new ServiceException("Error al verificar disponibilidad: " + e.getMessage(), e);
         }
     }
 
-    private static void validarCitaGenerica(Cita c) {
-        validarNoNull(c.getIdVeterinario(), "idVeterinario");
-        validarNoNull(c.getIdMascota(), "idMascota");
-        validarNoNull(c.getInicio(), "inicio");
-        if (c.getFin() != null && c.getFin().isBefore(c.getInicio())) {
-            throw new ValidacionException("La fecha/hora fin no puede ser anterior al inicio");
+    // ============ MÉTODOS PRIVADOS AUXILIARES ============
+
+    private void cambiarEstado(Long citaId, CitaEstado nuevoEstado) {
+        validarNoNull(citaId, "citaId");
+        validarNoNull(nuevoEstado, "nuevoEstado");
+
+        Optional<Cita> citaOpt = citaRepository.findById(citaId);
+        if (citaOpt.isEmpty()) {
+            throw new RecursoNoEncontradoException("No se encontró cita con ID: " + citaId);
         }
-        if (c.getMotivo() == null || c.getMotivo().isBlank()) {
-            throw new ValidacionException("El motivo de la consulta es obligatorio");
+
+        Cita cita = citaOpt.get();
+        CitaEstado estadoActual = cita.getEstado();
+
+        // Validar transición de estado
+        if (!estadoActual.puedeTransicionarA(nuevoEstado)) {
+            throw new EstadoInvalidoException(
+                    String.format("No se puede cambiar de %s a %s",
+                            estadoActual.getNombre(), nuevoEstado.getNombre()));
+        }
+
+        // Validaciones específicas por estado
+        switch (nuevoEstado) {
+            case EN_CURSO -> {
+                if (cita.getInicio().isAfter(LocalDateTime.now().plusMinutes(15))) {
+                    throw new ValidationException("No se puede iniciar una cita con más de 15 minutos de anticipación");
+                }
+            }
+            case FINALIZADA -> {
+                if (estadoActual != CitaEstado.EN_CURSO) {
+                    throw new EstadoInvalidoException("Solo se pueden finalizar citas que estén en curso");
+                }
+            }
+        }
+
+        cita.setEstado(nuevoEstado);
+
+        try {
+            citaRepository.update(cita);
+            LOG.info("Estado de cita cambiado: ID " + citaId + " -> " + nuevoEstado.getNombre());
+        } catch (Exception e) {
+            LOG.error("Error cambiando estado de cita ID " + citaId, e);
+            throw new ServiceException("Error al cambiar estado de la cita: " + e.getMessage(), e);
         }
     }
 
-    private static Cita mergeCita(Cita base, Cita cambios) {
-        if (cambios.getIdVeterinario() != null) base.setIdVeterinario(cambios.getIdVeterinario());
-        if (cambios.getIdMascota() != null) base.setIdMascota(cambios.getIdMascota());
-        if (cambios.getInicio() != null) base.setInicio(cambios.getInicio());
-        if (cambios.getFin() != null) base.setFin(cambios.getFin());
-        if (cambios.getMotivo() != null && !cambios.getMotivo().isBlank()) base.setMotivo(cambios.getMotivo().trim());
-        // El estado se cambia por métodos dedicados
-        return base;
+    private void validarCitaParaCreacion(Cita cita) {
+        // Validar campos obligatorios
+        if (cita.getIdVeterinario() == null) {
+            throw new ValidationException("ID del veterinario es obligatorio");
+        }
+
+        if (cita.getIdMascota() == null) {
+            throw new ValidationException("ID de la mascota es obligatorio");
+        }
+
+        if (cita.getInicio() == null) {
+            throw new ValidationException("Fecha y hora de inicio es obligatoria");
+        }
+
+        if (cita.getMotivo() == null || cita.getMotivo().trim().isEmpty()) {
+            throw new ValidationException("Motivo de la consulta es obligatorio");
+        }
+
+        // Validar lógica de negocio
+        if (cita.getInicio().isBefore(LocalDateTime.now())) {
+            throw new ValidationException("No se pueden crear citas en fechas pasadas");
+        }
+
+        if (cita.getFin() != null && cita.getFin().isBefore(cita.getInicio())) {
+            throw new ValidationException("La hora de fin no puede ser anterior al inicio");
+        }
+
+        // Validar horarios de trabajo (ejemplo: 8 AM a 6 PM)
+        int horaInicio = cita.getInicio().getHour();
+        if (horaInicio < 8 || horaInicio > 18) {
+            throw new ValidationException("Las citas deben programarse entre las 8:00 AM y 6:00 PM");
+        }
     }
 
-    private static void validarNoNull(Object o, String campo) {
-        if (o == null) throw new ValidacionException(campo + " no puede ser null");
+    private void validarNoNull(Object objeto, String nombreCampo) {
+        if (objeto == null) {
+            throw new ValidationException(nombreCampo + " no puede ser null");
+        }
     }
 
-    // Excepciones de dominio
-    public static class ValidacionException extends RuntimeException { public ValidacionException(String m) { super(m); } }
-    public static class RecursoNoEncontradoException extends RuntimeException { public RecursoNoEncontradoException(String m) { super(m); } }
-    public static class ConflictoDeDatosException extends RuntimeException { public ConflictoDeDatosException(String m) { super(m); } }
+    // ============ EXCEPCIONES ESPECÍFICAS ============
+
+    public static class ServiceException extends RuntimeException {
+        public ServiceException(String message) {
+            super(message);
+        }
+
+        public ServiceException(String message, Throwable cause) {
+            super(message, cause);
+        }
+    }
+
+    public static class ValidationException extends RuntimeException {
+        public ValidationException(String message) {
+            super(message);
+        }
+    }
+
+    public static class RecursoNoEncontradoException extends RuntimeException {
+        public RecursoNoEncontradoException(String message) {
+            super(message);
+        }
+    }
+
+    public static class ConflictoHorarioException extends RuntimeException {
+        public ConflictoHorarioException(String message) {
+            super(message);
+        }
+    }
+
+    public static class EstadoInvalidoException extends RuntimeException {
+        public EstadoInvalidoException(String message) {
+            super(message);
+        }
+    }
+
+    // ============ GETTER PARA TESTING ============
+
+    public CitaRepository getCitaRepository() {
+        return citaRepository;
+    }
 }
